fixed spacing between vs evenly

--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ font-family: 'ABeeZee';font-size: 44px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     background-color:#f9f5f2;
     max-width: 1172px;
     padding: 36px;
@@ -156,7 +156,7 @@ font-family: 'ABeeZee';font-size: 44px;
 .earn-stars-section {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     background-color:#f9f5f2;
     max-width: 1172px;
